updated HotelResourceIT #873