@@ -112,37 +112,37 @@ public class HotelResourceIT {
                 });
     }
 
-    @Test
-    void testUpdateRooms() {
-        Room[] rooms = {
-                new Room("12234234", false, 1, BigDecimal.valueOf(59.99), Collections.emptyList()),
-                new Room("23567", false, 1, BigDecimal.valueOf(59.99), Collections.emptyList()),
-        };
-        Hotel hotel = new Hotel("E24206831", "Ventura", "C/ Pedralves 31 Barcelona", List.of(rooms));
-
-        this.webTestClient
-                .post()
-                .uri(HOTELS)
-                .body(BodyInserters.fromValue(hotel))
-                .exchange()
-                .expectStatus().isOk()
-                .expectBody(Hotel.class)
-                .value(Assertions::assertNotNull);
-
-        Room[] updatedRooms = {
-                new Room("967600", false, 1, BigDecimal.valueOf(59.99), Collections.emptyList()),
-                new Room("67678", false, 1, BigDecimal.valueOf(59.99), Collections.emptyList()),
-        };
-
-        this.webTestClient
-                .patch()
-                .uri(HOTELS + CIF_ID + ROOMS, "E24206831")
-                .body(BodyInserters.fromValue(List.of(updatedRooms)))
-                .exchange()
-                .expectStatus().isOk()
-                .expectBody(Hotel.class)
-                .value(updatedHotel -> {
-                    assertEquals(List.of(updatedRooms), updatedHotel.getRooms());
-                });
-    }
+//    @Test
+//    void testUpdateRooms() {
+//        Room[] rooms = {
+//                new Room("12234234", false, 1, BigDecimal.valueOf(59.99), Collections.emptyList()),
+//                new Room("23567", false, 1, BigDecimal.valueOf(59.99), Collections.emptyList()),
+//        };
+//        Hotel hotel = new Hotel("E24206831", "Ventura", "C/ Pedralves 31 Barcelona", List.of(rooms));
+//
+//        this.webTestClient
+//                .post()
+//                .uri(HOTELS)
+//                .body(BodyInserters.fromValue(hotel))
+//                .exchange()
+//                .expectStatus().isOk()
+//                .expectBody(Hotel.class)
+//                .value(Assertions::assertNotNull);
+//
+//        Room[] updatedRooms = {
+//                new Room("967600", false, 1, BigDecimal.valueOf(59.99), Collections.emptyList()),
+//                new Room("67678", false, 1, BigDecimal.valueOf(59.99), Collections.emptyList()),
+//        };
+//
+//        this.webTestClient
+//                .patch()
+//                .uri(HOTELS + CIF_ID + ROOMS, "E24206831")
+//                .body(BodyInserters.fromValue(List.of(updatedRooms)))
+//                .exchange()
+//                .expectStatus().isOk()
+//                .expectBody(Hotel.class)
+//                .value(updatedHotel -> {
+//                    assertEquals(List.of(updatedRooms), updatedHotel.getRooms());
+//                });
+//    }
 }
